# logfmon

./: .gitignore  GNUmakefile  INSTALL  Makefile  Makefile.am  README  TODO  action.c  array.h  cache.c  cache.h  configure.ac  context.c  context.h  daemon.c  event-fam.c  event-inotify.c  event-kqueue.c  event-linux.c  event.c  event.h  file.c  file.h  freebsd_5.3,rc.d_logfmon.sh  getln.c  index.html  index.html.in  lex.c  lex.l  log.c  log.h  logfmon.8  logfmon.c  logfmon.conf  logfmon.conf.5  logfmon.conf.freebsd  logfmon.h  make-linux.sh  messages.c  messages.h  (+14 more)
compat/: asprintf.c  strlcat.c
examples/: brandini.conf  logfmon-freebsd.conf
ports/Arch/: PKGBUILD  logfmon
ports/OpenBSD/: Makefile  distinfo
ports/OpenBSD-3.6/: Makefile  distinfo
ports/OpenBSD-3.6/patches/: patch-Makefile
ports/OpenBSD-3.6/pkg/: DESCR  PLIST
ports/OpenBSD/pkg/: DESCR  MESSAGE  PLIST
rc.d/: logfmon.sh.freebsd.4.10
regress/: Makefile  test-symlink.data  test-symlink.sh  test-tags.c
